tests/baselines/reference/thisInSuperCall2.types
=== tests/cases/compiler/thisInSuperCall2.ts ===
class Base { 
>Base : Base

    constructor(a: any) {}
>a : 任意
>类型别名 :=> 任意
}

class Foo extends Base {
>Foo : Foo
>Base : Base

    public x: number;
>x : 数字
>类型别名 :=> 数字

    constructor() {
        super(this); // error: "super" has to be called before "this" accessing
>super(this) : 无值
>类型别名 :=> 无值
>super : 类为 Base
>this : 本体
    }
}


class Foo2 extends Base {
>Foo2 : Foo2
>Base : Base

    public x: number = 0;
>x : 数字
>类型别名 :=> 数字
>0 : 0

    constructor() {
        super(this); // error
>super(this) : 无值
>类型别名 :=> 无值
>super : 类为 Base
>this : 本体
    }
}

